Successfuly post from client to server.

--- a/package.yaml
+++ b/package.yaml
@@ -21,8 +21,9 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
-- servant-server
 - servant
+- servant-server
+- servant-client
 - base-compat
 - mtl
 - aeson
@@ -34,6 +35,7 @@ dependencies:
 - wai
 - warp
 - http-media
+- http-client
 - attoparsec
 - bytestring
 - string-conversions
