Start up clients from server based on configured list of strategies.

--- a/server.cfg
+++ b/server.cfg
@@ -1,5 +1,18 @@
+# Port for http server
+httpPort = 8081
+# Port for websocket server
+wsPort = 8082
+# Winner Score
 scoreA = 2
+# Tie Score
 scoreB = 1
+# Loser Score
 scoreC = -1
+# Score that if players fall below they will be disconnected
 minScore = -200
+# Game length in microseconds
 gameDuration = 1000000
+# List of player strategies for which the server will spin up clients at startup - can be empty
+players = ["Cooperate", "Defect"]
+# Number of random player strategies for which the server will spin up clients at startup - can be zero
+randomPlayerCount = 2
