Have server spin up random clients based on config.

--- a/server.cfg
+++ b/server.cfg
@@ -12,7 +12,7 @@ scoreC = -1
 minScore = -200
 # Game length in microseconds
 gameDuration = 1000000
-# List of player strategies for which the server will spin up clients at startup - can be empty
-players = ["Cooperate", "Defect"]
-# Number of random player strategies for which the server will spin up clients at startup - can be zero
+# List of player strategies the server will spin up on startup - can be empty
+players = ["AlwaysCooperate", "AlwaysDefect"]
+# Number of players with random strategies that the server will spin up on startup - can be zero
 randomPlayerCount = 2
