Refactor server to use a config object similar to client.

--- a/server.cfg
+++ b/server.cfg
@@ -2,12 +2,8 @@
 httpPort = 8081
 # Port for websocket server
 wsPort = 8082
-# Winner Score
-scoreA = 2
-# Tie Score
-scoreB = 1
-# Loser Score
-scoreC = -1
+# [Winner Score, Tie Score, Loser Score]
+scores = [2, 1, -1]
 # Score that if players fall below they will be disconnected
 minScore = -200
 # Game length in microseconds
